# OSVR-Leap-Motion

./: .gitignore  Analog.cpp  Analog.h  CMakeLists.txt  Configure.cpp  Configure.h  ControllerDevice.cpp  ControllerDevice.h  Gestures.cpp  Gestures.h  HandSelector.cpp  HandSelector.h  HardwareDetection.cpp  HardwareDetection.h  Imaging.cpp  Imaging.h  LeapData.cpp  LeapData.h  README.md  Tracker.cpp  Tracker.h  com_osvr_LeapMotion.cpp  com_osvr_LeapMotion.json
OSVRLeapRiggedHandsUnity/Assets/: Hand_v.5_for_export_for_Unity_L.prefab  Hand_v.5_for_export_for_Unity_L_Flat.prefab  Hand_v.5_for_export_for_Unity_R.prefab  Handsolo_Left.prefab  LeftHandController.prefab  LoPoly_Hands_Separate 1.prefab  LoPoly_Hands_Separate.prefab  OsvrContextProvider.cs  RightHandController.prefab  SkeletonPepperCutHands.prefab  VrHead.cs  female_hand_left.prefab
OSVRLeapRiggedHandsUnity/Assets/3d/: Hand_v.5_for_export_for_Unity.blend  femalehands1.fbx  fpshand1.FBX
OSVRLeapRiggedHandsUnity/Assets/3d/Materials/: HAND_N_ 1.mat  HAND_N_.mat  No Name 1.mat  hand_female 1.mat  hand_female.mat
OSVRLeapRiggedHandsUnity/Assets/HandPhysicsController/: Readme.txt
OSVRLeapRiggedHandsUnity/Assets/HandPhysicsController/Demo/: DemoScene.unity
OSVRLeapRiggedHandsUnity/Assets/HandPhysicsController/Demo/Materials/: HandPhysics_demo_floor_0.mat  HandPhysics_demo_floor_1.mat  HandPhysics_demo_item.mat
OSVRLeapRiggedHandsUnity/Assets/HandPhysicsController/Models/: Hand_left.FBX  Hand_right.FBX
OSVRLeapRiggedHandsUnity/Assets/HandPhysicsController/Models/Materials/: Hand.mat
OSVRLeapRiggedHandsUnity/Assets/HandPhysicsController/Prefabs/: Hand_left.prefab  Hand_right.prefab
OSVRLeapRiggedHandsUnity/Assets/HandPhysicsController/Scripts/Elements/: AttachedObject.cs  Finger.cs  FingerPart.cs  FingerPartTrigger.cs  HandPart.cs  PickableObject.cs
OSVRLeapRiggedHandsUnity/Assets/HandPhysicsController/Scripts/Main/: HandPhysicsCamera.cs  HandPhysicsController.cs  HandPhysicsStandaloneInput.cs
OSVRLeapRiggedHandsUnity/Assets/HandyHands/: female_hand_left_prefab.prefab  female_hand_leftandright_prefab.prefab  female_hand_right_prefab.prefab  hand_left_prefab.prefab  hand_leftandright_prefab.prefab  hand_right_prefab.prefab  handyhandsdemo.unity  readme.txt
OSVRLeapRiggedHandsUnity/Assets/HandyHands/models/: female_hand_left.fbx  female_hand_right.fbx  hand_left.FBX  hand_right.FBX
OSVRLeapRiggedHandsUnity/Assets/HandyHands/models/Materials/: floor.mat  hand_female 2.mat  hand_female.mat  hands.mat  skinramp2.tga
OSVRLeapRiggedHandsUnity/Assets/HandyHands/scripts/: VisualizeJoint.cs  showcasecam.cs
OSVRLeapRiggedHandsUnity/Assets/HandyHands/shaders/: handyskin.shader
OSVRLeapRiggedHandsUnity/Assets/LeapJSHands/Other/Materials/: Material 1.mat  Material.mat  blinn1.mat  blinn2.mat  blinn3.mat  blinn4.mat
OSVRLeapRiggedHandsUnity/Assets/LeapJSHands/Revamped Hand/Materials/: blinn10.mat  blinn11.mat  blinn12.mat  blinn13.mat  blinn14.mat  blinn15.mat  blinn16.mat  blinn17.mat  blinn6.mat  blinn7.mat  blinn8.mat  blinn9.mat
OSVRLeapRiggedHandsUnity/Assets/LeapJSHands/Test Rig/Materials/: lambert2.mat  lambert3.mat  lambert4.mat  lambert5.mat  lambert6.mat
OSVRLeapRiggedHandsUnity/Assets/LeapMotion/Materials/: BlackReflectiveMat.mat  CleanHandInner.mat  CleanHandOuter.mat  CleanRobotHandTextured.mat  GlowRobot.mat  HandRimLighting.mat  IntersectionCubesOpaque.mat  IntersectionCubesTransparent.mat  ToonyHand.mat  ToonyNails.mat  TransparentHandMaterial.mat
OSVRLeapRiggedHandsUnity/Assets/LeapMotion/Models/Materials/: LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface100Mat 1.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface100Mat.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface101Mat 1.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface101Mat.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface102Mat 1.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface102Mat.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface103Mat 1.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface103Mat.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface104Mat 1.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface104Mat.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface105Mat 1.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface105Mat.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface106Mat 1.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface106Mat.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface107Mat 1.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface107Mat.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface108Mat 1.mat  LEAPMOTION_LOW_POLY_HAND_v01_polySurface1_polySurface108Mat.mat  (+310 more)
OSVRLeapRiggedHandsUnity/Assets/LeapMotion/Prefabs/: LMHeadMountedRig.prefab
OSVRLeapRiggedHandsUnity/Assets/Materials/: index.mat  middle.mat  pinky.mat  ring.mat  thumb.mat
OSVRLeapRiggedHandsUnity/Assets/OSVRLeap/Scenes/: LeapOsvrRiggedHands.unity  LeapOsvrTest.unity
OSVRLeapRiggedHandsUnity/Assets/OSVRLeap/Scripts/: LeapAnalogs.cs  LeapBones.cs  LeapImagingCamera.cs  OSVRLeap_FingerModel.cs  OSVRLeap_HandModel.cs  OSVRLeap_RiggedFinger.cs  OSVRLeap_RiggedHand.cs
OSVRLeapRiggedHandsUnity/Assets/OSVRUnity/src/: PoseInterface.cs
OSVRLeapRiggedHandsUnity/Assets/Plugins/: OSVR.ClientKit.dll.mdb
OSVRLeapRiggedHandsUnity/Assets/Plugins/x86/: README.html  osvr-ver.txt
OSVRLeapRiggedHandsUnity/Assets/Plugins/x86_64/: README 2.html  osvrUnity-ver.txt
OSVRLeapRiggedHandsUnity/Assets/Scripts/: CopyPositions.cs  FlattenHierarchy.cs  HandsController.cs  OsvrFastMirror.cs  SampleHandsController.cs  SkeletonConfidenceAnalog.cs  SkeletonInterface.cs
OSVRLeapRiggedHandsUnity/Assets/SurvivalAssets/: StartAreaPart01.asset
OSVRLeapRiggedHandsUnity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
TestUnityClient/: LeapAnalogs.cs  LeapBones.cs  LeapImagingCamera.cs  LeapImagingDistortion.cs  LeapOsvrTest.unity
cmake/: FindLeap.cmake  FindLeapMotion.cmake
(+154 files in other folders)
